--- a/HW_05/05_01/css/style.css
+++ b/HW_05/05_01/css/style.css
@@ -28,15 +28,16 @@ body{
   list-style: none;
   margin: 0 auto;
   padding: 0 5px;
-  line-height: 36px;
 }
 
 .menu_first a {
+  display: block;
   text-decoration: none;
   padding: 0 10px;
   color: #489ad4;
   font-size: 14px;
-  font-family: Tahoma;
+  line-height: 36px;
+  font-family: helvetica_neueregular;
 }
 
 .menu_first li:hover {
@@ -53,7 +54,6 @@ body{
   list-style: none;
   float: right;
   padding: 0 10px;
-  line-height: 36px;
   color: white;
 }
 
@@ -61,7 +61,8 @@ body{
   text-decoration: none;
   color: white;
   font-size: 14px;
-  font-family: Tahoma;
+  line-height: 36px;
+  font-family: helvetica_neueregular;
 }
 
 .menu_second li:hover{
@@ -75,30 +76,42 @@ body{
 .form{
   height: 615px;
   width: 560px;
-  background: rgba(15, 15, 15, 0.7);
   position: absolute;
   left: 50%;
   top: 50%;
-  margin: -300px 0 0 -265px;
+  margin:-290px 0 0 -280px;
 }
 
-.form p{
+.form_first p{
   text-align: center;
   line-height: 20px;
   font-size: 24px;
-  font-family: Tahoma;
+  font-family: helvetica_neueregular;
   color: white;
   padding: 18px 0;
-  border-bottom: 2px solid #a3b198 ;
+}
+
+.form_first{
+  height: 62px;
+  width: 560px;
+  margin-bottom: 2px;
+  background: rgba(15, 15, 15, 0.7);
+}
+
+.form_second{
+  height: 550px;
+  width: 560px;
+  padding-top: 35px;
+  background: rgba(15, 15, 15, 0.7);
+  box-sizing: border-box;
 }
 
 .facebook{
   text-align: center;
-  margin:35px 0 0;
 }
 
 .ou{
-  margin: 30px auto;
+  margin: 25px auto;
 }
 
 .ou legend{
@@ -122,6 +135,8 @@ body{
   height: 35px;
   background-color: black;
   margin: 15px auto;
+  padding-left: 16px;
+  box-sizing: border-box;
   border:black;
 }
 
@@ -129,28 +144,35 @@ body{
   background-color: #1b5288;
   box-shadow: inset 0px 0px 6px 11px rgba(27,82,136,1);
   box-shadow: 0px 0px 6px 6px rgba(27,82,136,1);
+}
 
+.input[type="password"]:focus{
+  background-color: #1b5288;
+  box-shadow: inset 0px 0px 6px 11px rgba(27,82,136,1);
+  box-shadow: 0px 0px 6px 6px rgba(27,82,136,1);
 }
 
 .checkbox{
   width: 276px;
   margin: 0 auto;
+  color: #b1afad;
 }
 
 .button{
   display: block;
   width: 155px;
   height: 36px;
-  margin: 13px auto 0;
+  margin: 13px auto 21px;
   font-size: 14px;
-  font-family: Tahoma;
+  font-family: helvetica_neueregular;
   color: white;
   background: linear-gradient(to top,#2e7ac4,#4faddb);
   border: 2px solid #48a3d7;
   border-radius: 3px;
-  /*box-shadow: 0px 0px 3px 2px rgba(46,123,196,1);*/
 }
 
 .text p{
   font-size: 11px;
+  text-align: center;
+  color: #cccccc;
 }
